// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LabelCategory /> renders default 1`] = `
.c0 {
  display: inherit;
  padding: 1rem 1.5rem;
  position: relative;
  background: transparent;
  overflow: hidden;
  font-size: 1.3rem;
  cursor: pointer;
}

.c0::before {
  content: '';
  width: 90%;
  height: 90%;
  position: absolute;
  top: 5%;
  left: 5%;
  z-index: 20;
  background: #fff;
  border-radius: 0.5rem;
  box-shadow: 0px 3px 5px 1px rgba(217,217,217,0.82);
  -webkit-transition: -webkit-transform 0.15s ease-in-out;
  -webkit-transition: transform 0.15s ease-in-out;
  transition: transform 0.15s ease-in-out;
  -webkit-transform: translateX(-200%);
  -ms-transform: translateX(-200%);
  transform: translateX(-200%);
}

<Label__LabelCategory
  theme={
    Object {
      "bg": "#fafafa",
      "bgAdd": "#fff",
      "color": "#000",
      "colorAdd": "#767676",
      "shadow": "0px 3px 5px 1px rgba(217,217,217,0.82)",
    }
  }
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "_foldedDefaultProps": Object {
          "theme": Object {
            "bg": "#fafafa",
            "bgAdd": "#fff",
            "color": "#000",
            "colorAdd": "#767676",
            "shadow": "0px 3px 5px 1px rgba(217,217,217,0.82)",
          },
        },
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Label__LabelCategory-icvmzg-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "display:inherit;padding:1rem 1.5rem;position:relative;background:transparent;overflow:hidden;font-size:1.3rem;cursor:pointer;&::before{content:'';width:90%;height:90%;position:absolute;top:5%;left:5%;z-index:20;background:",
            [Function],
            ";border-radius:0.5rem;box-shadow:",
            [Function],
            ";transition:transform 0.15s ease-in-out;transform:translateX(",
            [Function],
            ");}",
          ],
        },
        "displayName": "Label__LabelCategory",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Label__LabelCategory-icvmzg-0",
        "target": "label",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    theme={
      Object {
        "bg": "#fafafa",
        "bgAdd": "#fff",
        "color": "#000",
        "colorAdd": "#767676",
        "shadow": "0px 3px 5px 1px rgba(217,217,217,0.82)",
      }
    }
  >
    <label
      className="c0"
    />
  </StyledComponent>
</Label__LabelCategory>
`;

exports[`<LabelCategory /> renders with theme 1`] = `
.c0 {
  display: inherit;
  padding: 1rem 1.5rem;
  position: relative;
  background: transparent;
  overflow: hidden;
  font-size: 1.3rem;
  cursor: pointer;
}

.c0::before {
  content: '';
  width: 90%;
  height: 90%;
  position: absolute;
  top: 5%;
  left: 5%;
  z-index: 20;
  background: #202124;
  border-radius: 0.5rem;
  box-shadow: none;
  -webkit-transition: -webkit-transform 0.15s ease-in-out;
  -webkit-transition: transform 0.15s ease-in-out;
  transition: transform 0.15s ease-in-out;
  -webkit-transform: translateX(-200%);
  -ms-transform: translateX(-200%);
  transform: translateX(-200%);
}

<Label__LabelCategory
  theme={
    Object {
      "bg": "#000",
      "bgAdd": "#202124",
      "color": "#fff",
      "colorAdd": "#8d8d8d",
      "shadow": "none",
    }
  }
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "_foldedDefaultProps": Object {
          "theme": Object {
            "bg": "#fafafa",
            "bgAdd": "#fff",
            "color": "#000",
            "colorAdd": "#767676",
            "shadow": "0px 3px 5px 1px rgba(217,217,217,0.82)",
          },
        },
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Label__LabelCategory-icvmzg-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "display:inherit;padding:1rem 1.5rem;position:relative;background:transparent;overflow:hidden;font-size:1.3rem;cursor:pointer;&::before{content:'';width:90%;height:90%;position:absolute;top:5%;left:5%;z-index:20;background:",
            [Function],
            ";border-radius:0.5rem;box-shadow:",
            [Function],
            ";transition:transform 0.15s ease-in-out;transform:translateX(",
            [Function],
            ");}",
          ],
        },
        "displayName": "Label__LabelCategory",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Label__LabelCategory-icvmzg-0",
        "target": "label",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    theme={
      Object {
        "bg": "#000",
        "bgAdd": "#202124",
        "color": "#fff",
        "colorAdd": "#8d8d8d",
        "shadow": "none",
      }
    }
  >
    <label
      className="c0"
    />
  </StyledComponent>
</Label__LabelCategory>
`;
